--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.2",
     "bootstrap": "^4.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
@@ -22,6 +26,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "deep-freeze": "^0.0.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -37,4 +42,3 @@
     "vitest": "^2.0.4"
   }
 }
-
